--- a/Front/package.json
+++ b/Front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ola-k-ase-app",
+  "name": "post-list-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
-    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0"
   },
